[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.12.0", features = [] }
text_io = "0.1.9"
error-chain = { version = "0.12.4", features = [] }
reqwest = { version = "0.11.22", features = ["blocking", "cookies"] }
cookie = "0.18.0"
url = "2.5.0"
regex = "1.10.2"
num = "0.4.1"
